implement eternals view backend calculations and frontend view renamed some routes and components
